refactor(backend): enforce Repository Pattern — no direct Panache calls in services
- Introduce AppointmentParticipationRepository, GroupRepository,
  MessageRepository, SettingsRepository as Panache-backed ports so
  all database access goes through the infrastructure layer
- Update all application-layer services to inject and use the new
  repositories instead of calling Panache static methods directly
- Move search to IdentityPort; KeycloakProfileService is now write-only
- Refine UserIdentity: add deleted() sentinel and null-safe getName()
- Fix four blockers in the users-table removal migration (orphan rows,
  NOT NULL enforcement, pre-flight validation)
- Remove unused imports and resolve SpotBugs violations
- Update all unit tests to use repository mocks

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>